# python-coding-test

./: .coveragerc  .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  server.py
src/: logger.py  tests.py
src/db/: companies.py
src/handlers/: discrepancy_checker.py
src/handlers/models/: discrepancy_checker_resp.py  error_resp.py
src/utils/: dict_comparer.py  pdf_checker.py
tests/db/: test_companies.py
tests/handlers/: test_discrepancy_checker.py
tests/utils/: test_dict_comparer.py  test_pdf_checker.py
